Closed
Bug 1197184
Opened 10 years ago
Closed 9 years ago
crash in mozilla::a11y::DocAccessibleParent::ActorDestroy(mozilla::ipc::IProtocolManager<T>::ActorDestroyReason)
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla54
| Tracking | Status | |
|---|---|---|
| firefox51 | --- | unaffected |
| firefox52 | --- | unaffected |
| firefox53 | --- | disabled |
| firefox54 | --- | fixed |
People
(Reporter: davidb, Assigned: tbsaunde)
References
Details
(Keywords: crash)
Crash Data
This bug was filed from the Socorro interface and is
report bp-8174c444-114d-495d-a038-a776f2150820.
=============================================================
Another MOZ_DIAGNOSTIC_ASSERT(CheckDocTree())
More reports here: http://is.gd/etz89F
Updated•10 years ago
|
Crash Signature: [@ mozilla::a11y::DocAccessibleParent::ActorDestroy(mozilla::ipc::IProtocolManager<T>::ActorDestroyReason)] → [@ mozilla::a11y::DocAccessibleParent::ActorDestroy(mozilla::ipc::IProtocolManager<T>::ActorDestroyReason)]
[@ mozilla::a11y::DocAccessibleParent::ActorDestroy]
David, do you believe this is another e10s+a11y related crash? I would like to add the appropriate tracking flag if so. This is showing up at #16 spot in top crashes on DevEd44 (3 days worth of data) so definitely a concern.
Flags: needinfo?(dbolter)
| Reporter | ||
Comment 2•10 years ago
|
||
(In reply to Ritu Kothari (:ritu) from comment #1)
> David, do you believe this is another e10s+a11y related crash?
Yep.
Blocks: e10sa11y2
Flags: needinfo?(dbolter)
| Reporter | ||
Comment 3•9 years ago
|
||
Please reopen if reappears.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → WORKSFORME
Comment 4•9 years ago
|
||
There are 103 crashes on nightly 54 with buildid 20170216030210.
| Reporter | ||
Comment 5•9 years ago
|
||
Some crashes:
https://crash-stats.mozilla.com/report/index/73c6227f-9fba-4ff2-b546-6f7922170217
https://crash-stats.mozilla.com/report/index/f30bbf3d-7394-4056-8676-66fe12170217
https://crash-stats.mozilla.com/report/index/19d44d7d-90d5-422a-86de-1e92f2170217
https://crash-stats.mozilla.com/report/index/33050e56-ae96-44eb-b0d2-552562170217
Flags: needinfo?(tbsaunde+mozbugs)
Pushed by tsaunders@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e952a5cc4a14
downgrade various MOZ_DIAGNOSTIC_ASSERTs
| Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(tbsaunde+mozbugs)
Comment 7•9 years ago
|
||
| bugherder | ||
Status: REOPENED → RESOLVED
Closed: 9 years ago → 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Updated•9 years ago
|
status-firefox43:
affected → ---
status-firefox51:
--- → wontfix
status-firefox52:
--- → affected
status-firefox53:
--- → affected
| Reporter | ||
Comment 8•9 years ago
|
||
NI myself to reassess for potential uplift next week.
Flags: needinfo?(dbolter)
| Reporter | ||
Comment 9•9 years ago
|
||
As expected this signature resolved: https://crash-stats.mozilla.com/search/?signature=~mozilla%3A%3Aa11y%3A%3ADocAccessibleParent%3A%3AActorDestroy%28mozilla%3A%3Aipc%3A%3AIProtocolManager%3CT%3E%3A%3AActorDestroyReason%29&signature=~mozilla%3A%3Aa11y%3A%3ADocAccessibleParent%3A%3AActorDestroy&build_id=%3E20170217030229&date=%3E%3D2017-02-18T14%3A11%3A12.000Z&date=%3C2017-02-21T14%3A11%3A12.000Z&page=1&_sort=-date&_facets=signature&_columns=date&_columns=signature&_columns=product&_columns=version&_columns=build_id&_columns=platform#facet-signature
Trying to discern if it just moves the problem or not -- we'll likely want to uplift. Trevor what do you think?
Flags: needinfo?(dbolter) → needinfo?(tbsaunde+mozbugs)
| Assignee | ||
Comment 10•9 years ago
|
||
yeah lets just uplift it all. Either it works around something or might well be needed to apply later things that do work around things.
Flags: needinfo?(tbsaunde+mozbugs)
Comment 11•9 years ago
|
||
The Firefox 52 release candidate build is being built on Monday. If we intend to uplift any of these fixes to 52 still, it needs to happen ASAP.
Assignee: nobody → tbsaunde+mozbugs
Flags: needinfo?(tbsaunde+mozbugs)
| Reporter | ||
Comment 12•9 years ago
|
||
This shouldn't affect 52 except for people forcing e10s + a11y. Updating flag.
Comment 13•9 years ago
|
||
e10s+a11y isn't riding past Aurora on 53.
Flags: needinfo?(tbsaunde+mozbugs)
You need to log in
before you can comment on or make changes to this bug.
Description
•