bug 1197184 - downgrade various MOZ_DIAGNOSTIC_ASSERTs